Shows vegetarian_weekly_recurrence and vegetarian_menu_type data only if filled

--- a/api/templates/teledeclaration_pdf.html
+++ b/api/templates/teledeclaration_pdf.html
@@ -717,15 +717,19 @@
                 </div>
                 {% endif %}
 
+                {% if vegetarian_weekly_recurrence %}
                 <div>
                     <img src="{% static '../../web/static/images/checkmark-outline.png' %}" height="14" width="14" />
                     Fréquence hebdomadaire des menus végétariens : {{ vegetarian_weekly_recurrence }}
                 </div>
+                {% endif %}
 
+                {% if vegetarian_menu_type %}
                 <div>
                     <img src="{% static '../../web/static/images/checkmark-outline.png' %}" height="14" width="14" />
                     Type de menu végétarien : {{ vegetarian_menu_type }}
                 </div>
+                {% endif %}
 
                 {% if vegetarian_menu_bases %}
                 <div>
