--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -35,6 +35,7 @@
         window.ENVIRONMENT = "{% environment %}"
         window.ENABLE_XP_RESERVATION = "{% enable_xp_reservation %}" === "True"
         window.ENABLE_XP_VEGE = "{% enable_xp_vege %}" === "True"
+        window.ENABLE_DASHBOARD = "{% enable_dashboard %}" === "True"
         window.ENABLE_PARTNERS = "{% enable_partners %}" === "True"
         window.ENABLE_TELEDECLARATION = "{% enable_teledeclaration %}" === "True"
         window.IS_WIDGET = "{{ is_widget }}"
