Add aria-hidden to horizontal rules in auth pages

--- a/web/templates/auth/logged_out.html
+++ b/web/templates/auth/logged_out.html
@@ -7,7 +7,7 @@
         Vous êtes déconnecté
     </p>
 
-    <hr />
+    <hr aria-hidden="true" />
     <button>M'identifier</button>
     <button>Créer mon compte</button>
 {% endblock %}
