--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -40,7 +40,7 @@
         <div>
 
         </div>
-        <hr />
+        <hr aria-hidden="true" />
 
 
         {% csrf_token %}
@@ -98,7 +98,7 @@
                     </div>
             </div>
         </div>
-        <hr />
+        <hr aria-hidden="true" />
 
         <div class="control-group">
             <div class="controls">
