--- a/web/templates/auth/register_token_invalid.html
+++ b/web/templates/auth/register_token_invalid.html
@@ -7,6 +7,6 @@
     <div style="text-align: left;">
         <p>Si les problèmes persistent, essayez de copier et coller l'URL contenu dans votre email dans votre navigation sans cliquer sur le bouton.</p>
     </div>
-    <hr />
+    <hr aria-hidden="true" />
     <a href="/"><button style="margin-top: 10px;">Accèder à Ma Cantine</button></a>
 {% endblock %}
