--- a/web/templates/auth/register_user.html
+++ b/web/templates/auth/register_user.html
@@ -34,11 +34,11 @@
             </div>
 
             {% if field.name == 'email' or field.name == 'canteen_name' %}
-            <hr />
+            <hr aria-hidden="true" />
             {% endif %}
         {% endfor %}
 
-        <hr />
+        <hr aria-hidden="true" />
         <div class="control-group">
             <div class="controls">
                 <button type="submit" style="font-family: Marianne">S'inscrire</button>
