Remove button-links and unused template

--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -57,7 +57,7 @@
             </div>
         </div>
     </form>
-    <a href="{% url 'register' %}"><button>Créer mon compte</button></a>
+    <a href="{% url 'register' %}">Créer mon compte</a>
     <hr aria-hidden="true" style="margin-top: 22px;" />
     {% uses_moncomptepro as show_mcp_button %}
     {% if show_mcp_button %}
