--- a/web/templates/auth/password_change_done.html
+++ b/web/templates/auth/password_change_done.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h2>Mot de passe modifié avec succès</h2>
-    <a href="/"><button>Accèder à Ma Cantine</button></a>
+    <a href="/">Accèder à Ma Cantine</a>
 {% endblock %}
