--- a/web/templates/auth/password_reset_done.html
+++ b/web/templates/auth/password_reset_done.html
@@ -9,5 +9,5 @@
     <p>Si vous avez un compte Ma Cantine, vous recevrez sous peu un email pour réinitialiser votre mot de passe.</p>
     <p> Vérifiez votre dossier spam, vos courriers indésirables, ou tout autre dossier pour voir si le message a été filtré par votre fournisseur de messagerie. </p>
     <p>En cas d'absence de message, veuillez vérifier que l'adresse email saisie est bien celle utilisée dans votre compte ma cantine.</p>
-    <a href="/"><button>Revenir à l'accueil</button></a>
+    <a href="/">Revenir à l'accueil</a>
 {% endblock %}
