--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -167,7 +167,7 @@
 
     </form>
     <div>
-        <a href="{% url 'login' %}"><button>J'ai déjà un compte</button></a>
+        <a href="{% url 'login' %}">J'ai déjà un compte</a>
     </div>
     {% uses_moncomptepro as show_mcp_button %}
     {% if show_mcp_button %}
