--- a/web/templates/auth/password_change_form.html
+++ b/web/templates/auth/password_change_form.html
@@ -22,9 +22,9 @@
 
                 {% if field.errors %}
                     {% for error in field.errors %}
-                        <div class="inline-error-container">
+                        <p class="inline-error-container">
                             {{ error | safe }}
-                        </div>
+                        </p>
                     {% endfor %}
                 {% endif %}
             </div>
