--- a/web/templates/auth/password_reset_form.html
+++ b/web/templates/auth/password_reset_form.html
@@ -21,9 +21,9 @@
 
             {% if field.errors %}
                 {% for error in field.errors %}
-                    <div class="inline-error-container">
+                    <p class="inline-error-container">
                         {{ error | safe }}
-                    </div>
+                    </p>
                 {% endfor %}
             {% endif %}
         </div>
