--- a/frontend/src/scss/dsfr.scss
+++ b/frontend/src/scss/dsfr.scss
@@ -7,7 +7,8 @@
   font-weight: 700;
   line-height: 3rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
+  margin: 0 0 1.5rem;
 }
 
 .fr-h2 {
@@ -15,7 +16,8 @@
   font-weight: 700;
   line-height: 2.5rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
+  margin: 0 0 1.5rem;
 }
 
 .fr-h3 {
@@ -23,7 +25,8 @@
   font-weight: 700;
   line-height: 2.25rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
+  margin: 0 0 1.5rem;
 }
 
 .fr-h4 {
@@ -31,7 +34,8 @@
   font-weight: 700;
   line-height: 2rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
+  margin: 0 0 1.5rem;
 }
 
 .fr-h5 {
@@ -39,7 +43,8 @@
   font-weight: 700;
   line-height: 1.75rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
+  margin: 0 0 1.5rem;
 }
 
 .fr-h6 {
@@ -47,7 +52,8 @@
   font-weight: 700;
   line-height: 1.75rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
+  margin: 0 0 1.5rem;
 }
 
 // NB: not all typographies added yet, if the one you need isn't here add it
@@ -56,7 +62,7 @@
   font-weight: 400;
   line-height: 1.5rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
 }
 
 .fr-text-sm {
@@ -64,7 +70,7 @@
   font-weight: 400;
   line-height: 1.5rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
 }
 
 .fr-button { // https://www.systeme-de-design.gouv.fr/elements-d-interface/composants/bouton
@@ -72,7 +78,7 @@
   font-weight: 500;
   line-height: 1.5rem;
   letter-spacing: normal;
-  text-transform: false
+  text-transform: false;
 }
 
 .fr-text-xs {
@@ -80,5 +86,5 @@
   font-weight: 400;
   line-height: 1.25rem;
   letter-spacing: .0333333333em;
-  text-transform: false
+  text-transform: false;
 }
