Add color property to auth background CSS

--- a/web/static/css/auth.css
+++ b/web/static/css/auth.css
@@ -38,6 +38,7 @@ body {
   align-items: center;
   align-content: center;
   justify-content: center;
+  color: #000;
   background: #f8f8fa;
   margin: 0;
 }
