--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -173,7 +173,7 @@
     {% if show_mcp_button %}
     <div style="margin-top: 16px;">
         <a href="{% url 'oidc-login' %}">
-            <img src="{% static 'images/button-moncomptepro.svg' %}" />
+            <img src="{% static 'images/button-moncomptepro.svg' %}" alt="S'identifier avec MonComptePro" />
         </a>
     </div>
     {% endif %}
