Update CC link; only link to new dashboard on DEBUG flag

--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -33,6 +33,7 @@
         window.CSRF_TOKEN = "{{ csrf_token }}";
         window.MATOMO_ID = "{% matomo_id %}";
         window.ENVIRONMENT = "{% environment %}"
+        window.DEBUG = "{% debug %}"
         window.ENABLE_XP_RESERVATION = "{% enable_xp_reservation %}" === "True"
         window.ENABLE_XP_VEGE = "{% enable_xp_vege %}" === "True"
         window.ENABLE_DASHBOARD = "{% enable_dashboard %}" === "True"
