Improvements to padding and typography

--- a/frontend/src/scss/dsfr.scss
+++ b/frontend/src/scss/dsfr.scss
@@ -85,6 +85,12 @@
   font-size: .75rem;
   font-weight: 400;
   line-height: 1.25rem;
-  letter-spacing: .0333333333em;
   text-transform: false;
+}
+
+.fr-display-xs {
+  /* 0.Titres alternatifs/XS/Desktop */
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 3.5rem;
 }
