--- a/frontend/src/scss/dsfr.scss
+++ b/frontend/src/scss/dsfr.scss
@@ -102,3 +102,10 @@
   font-weight: 700;
   line-height: 3.5rem;
 }
+
+.fr-hint-text {
+  color: #666;
+  display: block;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+}
